Restrict image size on articles

--- a/assets/less/layouts/_pages.less
+++ b/assets/less/layouts/_pages.less
@@ -87,6 +87,12 @@ body.page {
       height: auto;
       margin: 18px auto;
     }
+
+    img {
+      width: 100%;
+      max-width: 100%;
+      height: auto;
+    }
   }
 
   /*
