--- a/assets/less/layouts/_pages.less
+++ b/assets/less/layouts/_pages.less
@@ -102,12 +102,13 @@ body.page {
   .related-links {
 
     li {
-      width: 49%;
       float: left;
+      margin-right: 1%;
 
-      &:nth-of-type(2n) {
-        float: right;
-      }
+      width: 32%;
+
+      @media (max-width: @bp-larger-than-tablet) { width: 49%; }
+      @media (max-width: @bp-larger-than-mobile) { width: 100%; margin-right:0; }
 
       img {
         width: 100%;
