--- a/assets/less/layouts/_pages.less
+++ b/assets/less/layouts/_pages.less
@@ -99,6 +99,10 @@ body.page {
       related links
   */
 
+  #related-articles-header {
+    font-size: 2rem;
+    font-weight: bold;
+  }
   .related-links {
 
     li {
@@ -107,7 +111,7 @@ body.page {
 
       width: 32%;
 
-      @media (max-width: @bp-larger-than-tablet) { width: 49%; }
+      @media (max-width: @bp-larger-than-phablet) { width: 49%; }
       @media (max-width: @bp-larger-than-mobile) { width: 100%; margin-right:0; }
 
       img {
