Add some margin between featured image and content

--- a/assets/less/layouts/_pages.less
+++ b/assets/less/layouts/_pages.less
@@ -93,6 +93,11 @@ body.page {
       max-width: 100%;
       height: auto;
     }
+
+    section.entry-content,
+    div.entry-content {
+      margin-top: 35px;
+    }
   }
 
   /*
