--- a/assets/less/layouts/pages/_home.less
+++ b/assets/less/layouts/pages/_home.less
@@ -6,16 +6,19 @@ body.page-template-template-home {
 
    */
 
-  section.featured-post {
+  section.featured-post,
+  section.new-attractions {
 
     div {
 
       position: relative;
 
       @media (min-width: @bp-larger-than-mobile) {
-        width: 49%;
+        &.latest-article {
+          width: 49%;
+          margin: 0 0 15px 0;
+        }
         display: inline-block;
-        margin: 0 0 15px 0;
       }
 
       margin-bottom: 15px;
@@ -23,6 +26,10 @@ body.page-template-template-home {
       &.featured-item {
         width: 100%;
         margin-bottom: 5px;
+      }
+
+      &.latest-attraction:first-of-type {
+        margin:0;
       }
 
       &.latest-article:nth-of-type(2n+1) {
