Fix indent on latest attractions

--- a/assets/less/layouts/pages/_home.less
+++ b/assets/less/layouts/pages/_home.less
@@ -28,7 +28,7 @@ body.page-template-template-home {
         margin-bottom: 5px;
       }
 
-      &.latest-attraction:first-of-type {
+      &.latest-attraction:nth-of-type(3n+1) {
         margin:0;
       }
 
