use .alignleft instead of img.alignleft

--- a/assets/less/layouts/_pages.less
+++ b/assets/less/layouts/_pages.less
@@ -94,7 +94,7 @@ body.page {
       height: auto;
     }
 
-    img.alignleft {
+    .alignleft {
       @media (min-width: @bp-larger-than-desktop) {
         width: auto;
         height: auto;
