Add boldness to attraction-mention that cant be found

--- a/assets/less/layouts/_pages.less
+++ b/assets/less/layouts/_pages.less
@@ -114,6 +114,10 @@ body.page {
       font-size: x-small;
     }
 
+    .attraction-mention {
+      font-weight: bold;
+    }
+
     section.entry-content,
     div.entry-content {
       margin-top: 35px;
