--- a/assets/less/layouts/_pages.less
+++ b/assets/less/layouts/_pages.less
@@ -135,8 +135,13 @@ body.page {
 .related-links {
 
   li {
-    float: left;
-    margin-right: 1%;
+    display: inline-block;
+    vertical-align: top;
+    margin: 0;
+    padding: 0;
+
+    &:first-of-type {
+    }
 
     width: 32%;
 
