Show bullet points in articles

--- a/assets/less/layouts/_pages.less
+++ b/assets/less/layouts/_pages.less
@@ -122,6 +122,11 @@ body.page {
     div.entry-content {
       margin-top: 35px;
     }
+
+    ul {
+      list-style: disc;
+      margin-left: 50px;
+    }
   }
 
   /*
@@ -132,7 +137,10 @@ body.page {
   font-size: 2rem;
   font-weight: bold;
 }
+
 .related-links {
+
+  margin-left: 0;
 
   li {
     display: inline-block;
