bold also location-mentions

--- a/assets/less/layouts/_pages.less
+++ b/assets/less/layouts/_pages.less
@@ -114,7 +114,8 @@ body.page {
       font-size: x-small;
     }
 
-    .attraction-mention {
+    .attraction-mention,
+    .location-mention {
       font-weight: bold;
     }
 
