--- a/assets/less/layouts/pages/_home.less
+++ b/assets/less/layouts/pages/_home.less
@@ -89,8 +89,8 @@ body.page-template-template-home {
 
     .google-large-rectangle {
       // background-color: #eef;
-      // width: 300px;
-      // height: 600px;
+      width: 300px;
+      height: 600px;
     }
   }
 
