--- a/assets/less/layouts/pages/_home.less
+++ b/assets/less/layouts/pages/_home.less
@@ -79,6 +79,35 @@ body.page-template-template-home {
 
   /*
 
+      Featured city
+
+  */
+
+  section.home-featured-city {
+
+    img {
+      width: 100%;
+      display: block;
+      height: auto;
+    }
+
+    @media (min-width: @bp-larger-than-tablet) {
+      img {
+        float: left;
+        display: block;
+        width: 60%;
+        height: auto;
+      }
+
+      .featured-city-excerpt {
+        padding-left: 66%;
+      }
+    }
+  }
+
+
+  /*
+
       Sidebar - right
 
   */
