Add styles to /matkamuistot archive-page

--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -16,3 +16,6 @@
 
 /* Home */
 @import "layouts/pages/_home";       // Home page styling
+
+/* Diaries */
+@import "layouts/pages/_diary";      // Diaries styling
