--- a/assets/less/layouts/pages/_home.less
+++ b/assets/less/layouts/pages/_home.less
@@ -118,10 +118,10 @@ body.page-template-template-home {
 
     padding: 0;
 
-    .google-large-rectangle {
-      // background-color: #eef;
-      // width: 300px;
-      // height: 600px;
+    h1.sidebar-header {
+      font-size: x-large;
+      border-bottom: 5px solid @secondary-color;
+      margin-bottom: 15px;
     }
   }
 
