Show diary links on sidebars everywhere (should have more common way of building sidebar still)

--- a/assets/less/layouts/pages/_diary.less
+++ b/assets/less/layouts/pages/_diary.less
@@ -6,3 +6,11 @@ body.post-type-archive-diary div {
     display: block;
   }
 }
+
+/* Links on a sidebar */
+h1.sidebar-header {
+  font-size: x-large;
+  border-bottom: 5px solid @secondary-color;
+  margin-bottom: 15px;
+}
+
