Show diaries and recent articles on sidebar

--- a/assets/less/layouts/_sidebar.less
+++ b/assets/less/layouts/_sidebar.less
@@ -39,4 +39,37 @@ aside.sidebar {
       }
     }
   }
+
+  ul.sidebar-list {
+    img {
+      max-width: 100%;
+      height: auto;
+    }
+
+    li {
+      margin-bottom: 25px;
+    }
+  }
+
+  ul.sidebar-list,
+  ul.diary-list {
+
+    .diary-date,
+    .sidebar-date {
+
+      display: block;
+      color: @middle-grey;
+      font-size: small;
+      line-height: 100%;
+
+    }
+
+    a {
+      margin: 0;
+      display: block;
+    }
+
+  }
+
+
 }
