Style up and finish related linklist on pages/home

--- a/assets/less/layouts/_pages.less
+++ b/assets/less/layouts/_pages.less
@@ -156,9 +156,10 @@ body.page {
   related links
    */
 
-#related-articles-header {
-  font-size: 2rem;
-  font-weight: bold;
+.related-articles-header {
+  font-size: x-large;
+  border-bottom: 5px solid @secondary-color;
+  margin-bottom: 15px;
 }
 
 .related-links {
