--- a/assets/less/layouts/_sidebar.less
+++ b/assets/less/layouts/_sidebar.less
@@ -9,6 +9,13 @@ aside.sidebar {
     margin-bottom: 10px;
   }
 
+  /* Links on a sidebar */
+  h2.sidebar-header {
+    font-size: x-large;
+    border-bottom: 5px solid @secondary-color;
+    margin-bottom: 15px;
+  }
+
   ul {
     list-style-type: none;
     padding: 0;
@@ -47,7 +54,7 @@ aside.sidebar {
     }
 
     li {
-      margin-bottom: 25px;
+      // margin-bottom: 25px;
     }
   }
 
@@ -55,7 +62,7 @@ aside.sidebar {
   ul.diary-list {
 
     .diary-date,
-    .sidebar-date {
+    .sidebar-link-date {
 
       display: block;
       color: @middle-grey;
