Show location for sidebar attractions instead of the date

--- a/assets/less/layouts/_sidebar.less
+++ b/assets/less/layouts/_sidebar.less
@@ -61,8 +61,7 @@ aside.sidebar {
   ul.sidebar-list,
   ul.diary-list {
 
-    .diary-date,
-    .sidebar-link-date {
+    .sidebar-subtext {
 
       display: block;
       color: @middle-grey;
