--- a/assets/less/layouts/_pages.less
+++ b/assets/less/layouts/_pages.less
@@ -24,47 +24,21 @@ body.page {
       left: 0;
       padding: 5px 0;
 
-      @media (min-width: @bp-larger-than-phablet) {
-        padding: 5px 20px;
+      .article-title {
+        margin-bottom: 25px;
       }
 
       h1 {
-        font-size: xx-large;
+        font-size: xxx-large;
         font-weight: bold;
-        margin: 0 0 5px 0;
+        margin: 5px 0 0 0;
+        border-bottom: 2px solid @light-grey;
       }
 
       h2 {
-        margin: 0;
+        margin: 5px 0 0 0;
         text-transform: uppercase;
         font-size: small;
-      }
-
-      @media (min-width: @bp-larger-than-phablet) {
-
-        text-align: center;
-        background: rgba(0,0,0,0.8);
-        color: white;
-
-        padding: 20px 20px;
-        position: absolute;
-        top: 3em;
-        left: 50%;
-        max-width: 50%;
-        transform: translateX(-50%);
-        color: white;
-
-        h2 {
-          margin: 0;
-          text-transform: uppercase;
-          font-size: small;
-        }
-      }
-
-      @media (min-width: @bp-larger-than-tablet) {
-        position: absolute;
-        left: 100px;
-        transform: none;
       }
 
     }
